# warp-control-fedora

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PROJECT_CONTEXT.md  README.md  instalar-warp-control-fedora.sh  pyproject.toml  setup.py
.github/workflows/: packages.yml  quality.yml  release.yml
data/: com.devruby.warpcontrol.desktop  com.devruby.warpcontrol.metainfo.xml  com.devruby.warpcontrol.policy  com.robler.warpcontrol.desktop  com.robler.warpcontrol.metainfo.xml  com.robler.warpcontrol.policy
debian/: changelog  control  copyright  rules  warp-control.install
docs/: ARCHITECTURE.md  INSTALL.md  SUPPORT.md
libexec/warp-control/: install-warp  restart-warp
packaging/: release.env
packaging/appimage/: AppRun  appimagetool.sha256  com.devruby.warpcontrol.desktop  com.robler.warpcontrol.desktop  entrypoint.py  runtime.sha256  verify_tree.py  warp-control.spec
packaging/arch/: PKGBUILD
packaging/rpm/: warp-control.spec
scripts/: build-appimage.sh  build-source-tarball.sh  install.sh  migrate-legacy.sh  update-release-metadata.py  verify-release.sh
src/warp_control/: __main__.py  app.py  app_indicator.py  commands.py  config.py  domains.py  models.py  runtime.py  status_notifier.py  tray.py
tests/: test_app_controller.py  test_commands.py  test_config.py  test_documentation.py  test_domains.py  test_helper.py  test_project_metadata.py  test_runtime.py  test_status_notifier.py
tests/installers/: test_detector.py  test_plans.py
tests/packaging/: test_appimage.py  test_installed_layout.py  test_metadata.py  (+2 more)
(+45 files in other folders)
