[build-system]
requires = ["setuptools>=59"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-control"
version = "2.0.0"
description = "Desktop control panel for Cloudflare WARP"
requires-python = ">=3.9"
dependencies = ["idna>=2.10"]

[project.scripts]
warp-control = "warp_control.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"warp_control.assets" = ["*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "ui: GTK widget tests (require an available display)",
]

[tool.ruff]
target-version = "py39"
